# cool_urban_spaces_backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  file.sql  pyproject.toml  start_debug.sh
cool_urban_spaces_backend/: database.py  main.py  models.py
cool_urban_spaces_backend/api/: messages.py  suggestion.py  user.py
frontend_factory/: Dockerfile  build_project.sh
postgres_db/: Dockerfile  file.sql
static/: index.html
static/web/: manifest.json
tests/: test_cool_urban_spaces_backend.py
